noissue: clean up pom config